--- a/test/index.html
+++ b/test/index.html
@@ -24,9 +24,9 @@
         <div class="hairline-demo__box hairline hairline--bottom">下边框</div>
         <div class="hairline-demo__box hairline hairline--left">左边框</div>
 
-        <div class="hairline-demo__box hairline-demo__box--more hairline hairline--round">更多组合</div>
-        <div class="hairline-demo__box hairline-demo__box--more-round1 hairline hairline--round">圆角组合1</div>
-        <div class="hairline-demo__box hairline-demo__box--more-round2 hairline hairline--round">圆角组合2</div>
+        <div class="hairline-demo__box hairline-demo__box--more hairline hairline--round">多条边框</div>
+        <div class="hairline-demo__box hairline-demo__box--more-round1 hairline hairline--round">全圆角+多边框</div>
+        <div class="hairline-demo__box hairline-demo__box--more-round2 hairline hairline--round">非全圆角+多边框</div>
     </div>
     <h2>对比普通边框</h2>
     <div class="hairline-demo">
