补充输入框的示例

--- a/test/index.html
+++ b/test/index.html
@@ -17,16 +17,29 @@
     </div>
     <h2>各种边框示例</h2>
     <div class="hairline-demo">
-        <div class="hairline-demo__box hairline hairline--round">边框</div>
-        <div class="hairline-demo__box hairline-demo__box--round hairline hairline--round">圆角边框</div>
-        <div class="hairline-demo__box hairline hairline--top">上边框</div>
-        <div class="hairline-demo__box hairline hairline--right">右边框</div>
-        <div class="hairline-demo__box hairline hairline--bottom">下边框</div>
-        <div class="hairline-demo__box hairline hairline--left">左边框</div>
+        <div class="hairline hairline--round hairline-demo__box">边框</div>
+        <div class="hairline hairline--round hairline-demo__box hairline-demo__box--round">圆角边框</div>
+        <div class="hairline hairline--top hairline-demo__box">上边框</div>
+        <div class="hairline hairline--right hairline-demo__box">右边框</div>
+        <div class="hairline hairline--bottom hairline-demo__box">下边框</div>
+        <div class="hairline hairline--left hairline-demo__box">左边框</div>
 
-        <div class="hairline-demo__box hairline-demo__box--more hairline hairline--round">多条边框</div>
-        <div class="hairline-demo__box hairline-demo__box--more-round1 hairline hairline--round">全圆角+多边框</div>
-        <div class="hairline-demo__box hairline-demo__box--more-round2 hairline hairline--round">非全圆角+多边框</div>
+        <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more">多条边框</div>
+        <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more-round1">全圆角+多边框</div>
+        <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more-round2">非全圆角+多边框</div>
+
+        <div class="hairline hairline--input hairline--bottom hairline-demo__box hairline-demo__box--input1 ">
+            <input type="text" placeholder="单行单边框输入框">
+        </div>
+        <div class="hairline hairline--input hairline--round hairline-demo__box hairline-demo__box--input2">
+            <input type="text" placeholder="单行输入框">
+        </div>
+        <div class="hairline hairline--input hairline--round hairline-demo__box hairline-demo__box--input3">
+            <input type="text" placeholder="圆角输入框">
+        </div>
+        <div class="hairline hairline--input hairline--round hairline-demo__box hairline-demo__box--textarea">
+            <textarea placeholder="多行输入框"></textarea>
+        </div>
     </div>
     <h2>对比普通边框</h2>
     <div class="hairline-demo">
