添加表格示例

--- a/test/index.html
+++ b/test/index.html
@@ -40,6 +40,124 @@
         <div class="hairline hairline--input hairline--round hairline-demo__box hairline-demo__box--textarea">
             <textarea placeholder="多行输入框"></textarea>
         </div>
+
+        <table class="hairline hairline--round hairline-demo__table">
+            <caption class="hairline hairline--bottom">横线表格</caption>
+            <thead>
+                <tr>
+                    <th class="hairline hairline--bottom">Class</th>
+                    <th class="hairline hairline--bottom">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="hairline hairline--bottom"><code>.hairline</code></td>
+                    <td class="hairline hairline--bottom">base class</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--bottom"><code>.hairline--round</code></td>
+                    <td class="hairline hairline--bottom">round hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--bottom"><code>.hairline--top</code></td>
+                    <td class="hairline hairline--bottom">top hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--bottom"><code>.hairline--right</code></td>
+                    <td class="hairline hairline--bottom">right hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--bottom"><code>.hairline--bottom</code></td>
+                    <td class="hairline hairline--bottom">bottom hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--bottom"><code>.hairline--left</code></td>
+                    <td class="hairline hairline--bottom">left hairline border</td>
+                </tr>
+                <tr>
+                    <td><code>.hairline--input</code></td>
+                    <td>input/textarea element hairline border</td>
+                </tr>
+            </tbody>
+        </table>
+        <table class="hairline hairline--round hairline-demo__table hairline-demo__table--portrait">
+            <caption class="hairline hairline--bottom">纵线表格</caption>
+            <thead>
+                <tr>
+                    <th class="hairline hairline--right">Class</th>
+                    <th class="hairline hairline--right">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="hairline hairline--right"><code>.hairline</code></td>
+                    <td class="hairline hairline--right">base class</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--right"><code>.hairline--round</code></td>
+                    <td class="hairline hairline--right">round hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--right"><code>.hairline--top</code></td>
+                    <td class="hairline hairline--right">top hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--right"><code>.hairline--right</code></td>
+                    <td class="hairline hairline--right">right hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--right"><code>.hairline--bottom</code></td>
+                    <td class="hairline hairline--right">bottom hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--right"><code>.hairline--left</code></td>
+                    <td class="hairline hairline--right">left hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline hairline--right"><code>.hairline--input</code></td>
+                    <td class="hairline hairline--right">input/textarea element hairline border</td>
+                </tr>
+            </tbody>
+        </table>
+        <table class="hairline hairline-demo__table hairline-demo__table--cross">
+            <caption class="hairline hairline--bottom">横纵表格</caption>
+            <thead>
+                <tr>
+                    <th class="hairline">Class</th>
+                    <th class="hairline">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="hairline"><code>.hairline</code></td>
+                    <td class="hairline">base class</td>
+                </tr>
+                <tr>
+                    <td class="hairline"><code>.hairline--round</code></td>
+                    <td class="hairline">round hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline"><code>.hairline--top</code></td>
+                    <td class="hairline">top hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline"><code>.hairline--right</code></td>
+                    <td class="hairline">right hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline"><code>.hairline--bottom</code></td>
+                    <td class="hairline">bottom hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline"><code>.hairline--left</code></td>
+                    <td class="hairline">left hairline border</td>
+                </tr>
+                <tr>
+                    <td class="hairline"><code>.hairline--input</code></td>
+                    <td class="hairline">input/textarea element hairline border</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <h2>对比普通边框</h2>
     <div class="hairline-demo">
