补充列表示例

--- a/test/index.html
+++ b/test/index.html
@@ -41,6 +41,12 @@
             <textarea placeholder="多行输入框"></textarea>
         </div>
 
+        <ul class="hairline-demo__list">
+            <li class="hairline hairline--bottom">列表项1</li>
+            <li class="hairline hairline--bottom">列表项2</li>
+            <li class="hairline hairline--bottom">列表项3</li>
+        </ul>
+
         <table class="hairline hairline--round hairline-demo__table">
             <caption class="hairline hairline--bottom">横线表格</caption>
             <thead>
