--- a/test/index.html
+++ b/test/index.html
@@ -17,17 +17,20 @@
     </div>
     <h2>各种边框示例</h2>
     <div class="hairline-demo">
-        <div class="hairline hairline--round hairline-demo__box">边框</div>
+        <h3>基础</h3>
+        <div class="hairline hairline--round hairline-demo__box">直角边框</div>
         <div class="hairline hairline--round hairline-demo__box hairline-demo__box--round">圆角边框</div>
         <div class="hairline hairline--top hairline-demo__box">上边框</div>
         <div class="hairline hairline--right hairline-demo__box">右边框</div>
         <div class="hairline hairline--bottom hairline-demo__box">下边框</div>
         <div class="hairline hairline--left hairline-demo__box">左边框</div>
 
+        <h3>多条</h3>
         <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more">多条边框</div>
         <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more-round1">全圆角+多边框</div>
         <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more-round2">非全圆角+多边框</div>
 
+        <h3>输入框</h3>
         <div class="hairline hairline--input hairline--bottom hairline-demo__box hairline-demo__box--input1 ">
             <input type="text" placeholder="单行单边框输入框">
         </div>
@@ -41,12 +44,14 @@
             <textarea placeholder="多行输入框"></textarea>
         </div>
 
+        <h3>列表</h3>
         <ul class="hairline-demo__list">
             <li class="hairline hairline--bottom">列表项1</li>
             <li class="hairline hairline--bottom">列表项2</li>
             <li class="hairline hairline--bottom">列表项3</li>
         </ul>
 
+        <h3>表格</h3>
         <table class="hairline hairline--round hairline-demo__table">
             <caption class="hairline hairline--bottom">横线表格</caption>
             <thead>
