--- a/test/index.html
+++ b/test/index.html
@@ -27,8 +27,8 @@
 
         <h3>多条</h3>
         <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more">多条边框</div>
-        <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more-round1">全圆角+多边框</div>
-        <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more-round2">非全圆角+多边框</div>
+        <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more-round1">全圆角+多条边框</div>
+        <div class="hairline hairline--round hairline-demo__box hairline-demo__box--more-round2">非全圆角+多条边框</div>
 
         <h3>输入</h3>
         <div class="hairline hairline--input hairline--bottom hairline-demo__box hairline-demo__box--input1 ">
